fix logo align in header

--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -3,9 +3,12 @@
 }
 
 .app__header {
-  background-color: #222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 50px;
   padding: 20px;
+  background-color: #222;
   border-bottom: 3px solid #ffdf00;
 }
 .nav__container{
